Add required files and configure connexion to run api
