# validator/entrypoints/api/handlers.py
@@ -1,0 +1,15 @@
+#!/usr/bin/python3
+
+# handlers.py
+# Date:  24/09/2020
+# Author: Mihai Coșleț
+# Email: coslet.mihai@gmail.com
+
+"""
+Module description
+
+"""
+
+
+def validate_endpoint(dataset_uri, endpoint_url, graphs, schema_files):
+    return {'hello': 'maaaaan'}
